--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=ExchangeMate
+
+exchange.api.url=https://api.exchangerate.host
+exchange.api.key=b7adb8703d199b0e19a1fc2cc0ad6a86
